added footer to jqm stack

--- a/lib/public/index.erb
+++ b/lib/public/index.erb
@@ -6,6 +6,6 @@
     <p>Congrats!  You have landed!</p>
   </div> 
   <div data-role="footer">
-    <h4 style="display:inline"></h4>
+    <p>Jack Russell Software Company, LLC</p>
   </div>   
 </div>   
