updated with jqm stack

--- a/lib/public/index.erb
+++ b/lib/public/index.erb
@@ -6,6 +6,6 @@
     <p>Congrats!  You have landed!</p>
   </div> 
   <div data-role="footer">
-    <p>Jack Russell Software Company, LLC</p>
+    <center>Jack Russell Software Company, LLC</center>
   </div>   
 </div>   
